--- a/index.html
+++ b/index.html
@@ -1,23 +1,90 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Mobilní aplikace</title>
-        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="style.css">
-    </head>
-    <body>
-        <div class="obal">
 
-            <!-- tvoje HTML sem -->
+<head>
+    <meta charset="utf-8">
+    <title>Mobilní aplikace</title>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+</head>
 
-            Ajajaj, tento týden tu nic není, je to zcela na tobě :)
+<body>
+    <div class="obal">
 
-            Zadání ve vysledek.png
+        <div class="menu">
+
+            <a href="#">
+                <h1>SUPER APPKA</h1>
+            </a>
+            <a href="#">Úžasný design</a>
+            <a href="#">Boží funkce</a>
+            <a href="#">Zdarma ke stažení</a>
+
+        </div>
+
+        <div class="hlavni-okno">
+
+            <p class="nadpis">Super Appka</p>
+
+            <p class="slogan">Úžasná mobilní aplikace,<br>
+                která Ti změní život.
+            </p>
+
+            <div class="tlacitko">
+                <p class="tlacitko1">Stáhnout zdarma</p>
+
+                <p class="tlacitko2">Více informací</p>
+            </div>
+
+            <div class="telefon">
+
+                <img src="images\telefon.png" alt="telefon v ruce">
+
+            </div>
+
+        </div>
+
+        <div class="moznosti">
+
+            <div class="moznost-blok">
+
+                <img src="images\letadlo.svg" alt="letadlo">
+
+                <p class="nadpis3">Cestuj po světě</p>
+
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat, quos assumenda quibusdam error tempora blanditiis dolorum sunt provident aut necessitatibus commodi! Accusantium a autem tenetur enim consequatur magni numquam distinctio.</p>
+            </div>
+
+            <div class="moznost-blok">
+
+                <img src="images\bubliny.svg" alt="bubliny">
+
+                <p class="nadpis3">Chatuj s přáteli</p>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi exercitationem deleniti nulla aut ab id. Cum illo ullam, voluptatum quis nemo fugiat aspernatur possimus placeat facere soluta explicabo incidunt earum.</p>
+            </div>
+
+            <div class="moznost-blok">
+
+                <img src="images\mapa.svg" alt="mapa">
+
+                <p class="nadpis3">Zažij dobrodružství</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum natus ea illo ex eaque ab qui quae saepe perferendis inventore eius modi, cum maxime? Quasi minima numquam debitis repellendus veniam.</p>
+
+            </div>
+
+        </div>
+
+        <div class="zapati">
+
+            &#169 2016, Web od A do Z
+
+        </div>
 
 
+    </div>
 
+</body>
 
-        </div><!-- konec .obal -->
-    </body>
 </html>
